Fix what I beleive was a cutandpaste mistake, but it broke less syntax

--- a/karl/views/static/ux2/css/ie.less
+++ b/karl/views/static/ux2/css/ie.less
@@ -209,7 +209,7 @@ form.addKeyword {
 }
 @media only screen and (min-width: 768px) {
   ul.actionsMenu {
-    (1) > a {
+    > li:nth-child(1) > a {
       behavior: url(PIE.htc);
     }
     > li:nth-child(1) > adropdown-toggle:hover {
