--- a/karl/views/static/ux2/css/ie.less
+++ b/karl/views/static/ux2/css/ie.less
@@ -86,6 +86,9 @@ form.addTag {
 .nav-tabs > li > a, .nav-pills > li > a {
   behavior: url(PIE.htc);
 }
+.nav-list {
+  behavior: url(PIE.htc);
+}
 /* MAIN */
 .quickpanelToggle(@textColor:#fff) {
     behavior: url(PIE.htc);
