--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -76,6 +76,35 @@ a#global-logo {
     }
 }
 
+.sras-searchknobs {
+    font-family: @fancyFont;
+    font-size: 0.8em;
+    .nav-list [class^="icon-"] {
+        margin-right: 5px;
+    }
+}
+
+.sras-result-title {
+    font-size: 1.1em;
+}
+
+.sras-details {
+    font-size: 0.85em;
+    .icon-karl {
+        width: 14px;
+        height: 14px;
+        margin: 2px 5px 2px 0;
+    }
+}
+
+#sras-search-form {
+    padding: 0;
+    margin: 0 0 5px 0;
+    .sras-discreet {
+        font-size: 0.75em;
+    }
+}
+
 #chatter-panel-text {
     width: 95%;
 }
@@ -274,4 +303,3 @@ a#global-logo {
 #reactivateModal {
     display:none;
 }
-
