--- a/karl/views/static/ux2/css/_mixins.less
+++ b/karl/views/static/ux2/css/_mixins.less
@@ -417,3 +417,21 @@
     bottom:0;
     margin: auto;
 }
+
+// Horizontal dividers
+// -------------------------
+// Dividers (basically an hr) within dropdowns and nav lists
+.nav-divider() {
+  height: 1px;
+  margin: 8px 1px; // 8px 1px
+  overflow: hidden;
+  background-color: #eadecc;
+  // border-bottom: 1px solid @white;
+
+  // IE7 needs a set width since we gave a height. Restricting just
+  // to IE7 to keep the 1px left/right space in other browsers.
+  // It is unclear where IE is getting the extra space that we need
+  // to negative-margin away, but so it goes.
+  *width: 100%;
+  *margin: -5px 0 5px;
+}
