--- a/karl/views/static/ux2/css/elements/navs.less
+++ b/karl/views/static/ux2/css/elements/navs.less
@@ -27,9 +27,12 @@
 // --------
 
 .nav-list {
-  padding-left: 14px;
-  padding-right: 14px;
+  // padding-left: 14px;
+  // padding-right: 14px;
+  padding: 8px 14px;
   margin-bottom: 0;
+  background: darken(@baseColor2, 10%);
+  .css3_border_radius(.5em);
 }
 .nav-list > li > a,
 .nav-list .nav-header {
@@ -43,22 +46,26 @@
   font-size: 11px;
   font-weight: bold;
   line-height: @baseLineHeight;
-  color: @grayLight;
+  color: @black;
   text-transform: uppercase;
 }
 .nav-list > li + .nav-header {
   margin-top: 9px;
 }
+.nav-list > li > a:hover,
 .nav-list .active > a,
 .nav-list .active > a:hover {
-  color: @white;
+  color: @bodyBg;
   text-shadow: 0 -1px 0 rgba(0,0,0,.2);
   background-color: @linkColor;
 }
 .nav-list [class^="icon-"] {
   margin-right: 2px;
 }
-
+// Dividers (basically an hr) within the dropdown
+.nav-list .divider {
+  .nav-divider();
+}
 
 
 // TABS AND PILLS
