styled tag list+cloud

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -303,3 +303,26 @@ a#global-logo {
 #reactivateModal {
     display:none;
 }
+
+.tagweight1 {
+  font-size: 100%;
+}
+.tagweight2 {
+  font-size: 120%;
+}
+.tagweight3 {
+  font-size: 140%;
+}
+.tagweight4 {
+  font-size: 160%;
+}
+.tagweight5 {
+  font-size: 180%;
+}
+.tagweight6 {
+  font-size: 200%;
+}
+.tagweight7 {
+  font-size: 220%;
+  color: green;
+}
