--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -89,3 +89,10 @@ a#global-logo{padding-left:35px;}
 .profilesWrapper .visual-clear{clear:both;}
 #deactivateModal{display:none;}
 #reactivateModal{display:none;}
+.tagweight1{font-size:100%;}
+.tagweight2{font-size:120%;}
+.tagweight3{font-size:140%;}
+.tagweight4{font-size:160%;}
+.tagweight5{font-size:180%;}
+.tagweight6{font-size:200%;}
+.tagweight7{font-size:220%;color:green;}
