--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -340,7 +340,7 @@ th a.selected {
     display: inline-block;
     width: 14px;
     height: 14px;
-    margin: 5px 0;
+    margin: 2px 5px 2px 0;
     .ie7-restore-right-whitespace();
 }
 
