--- a/karl/views/static/ux2/css/elements/portlets.less
+++ b/karl/views/static/ux2/css/elements/portlets.less
@@ -11,6 +11,12 @@
         font-size: 1.333;
         margin-top: 0;
     }
+    .label-inverse {
+        background-color: @linkColor;
+    }
+    .label-inverse:hover {
+        background-color: darken(@linkColor, 10%);
+    }
 }
 .contentRelated {
     .css3_border_radius(.5em);
@@ -56,6 +62,11 @@
     padding: 0 0 5px 0;
     margin: 0 0 5px 0;
     border-bottom: 1px dotted darken(#82ADBF, 20%);
+    .footer-line {
+        color: @bodyBg;
+        font-size: 0.80em;
+        font-style: italic;
+    }
 }
 
 .portlet-buttons {
