fixed small submenu top padding

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -69,6 +69,10 @@ a#global-logo {
     .nav-pills {
         padding: 0;
     }
+    .nav-pills > li > a {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
     .nav-pills > li > a:hover {
         //background: darken(@baseColor2, 10%);
         color: @white;
