--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -49,6 +49,7 @@ a#global-logo{padding-left:35px;}
 #recent-quips-add-form textarea{width:99%;}
 .contentWrapper section.main{padding-top:0;}.contentWrapper section.main form.addTag{width:20em;}
 .section-submenu{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.75em;padding:0;margin:0;}.section-submenu .nav-pills{padding:0;}
+.section-submenu .nav-pills>li>a{margin-top:0;margin-bottom:0;}
 .section-submenu .nav-pills>li>a:hover{color:#eadecc;background-color:#3d8fb3;}
 .sras-searchknobs{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;}.sras-searchknobs .nav-list [class^="icon-"]{margin-right:5px;}
 .sras-result-title{font-size:1.1em;}
