--- a/karl/views/static/ux2/css/elements/navs.less
+++ b/karl/views/static/ux2/css/elements/navs.less
@@ -57,7 +57,7 @@
 .nav-list .active > a:hover {
   color: @bodyBg;
   text-shadow: 0 -1px 0 rgba(0,0,0,.2);
-  background-color: @linkColor;
+  background-color: @baseColor1;
 }
 .nav-list [class^="icon-"] {
   margin-right: 2px;
