--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -404,7 +404,7 @@ button.btn.btn-mini,input[type="submit"].btn.btn-mini{*padding-top:1px;*padding-
 .nav-list>li>a,.nav-list .nav-header{display:block;padding:3px 15px;margin-left:-15px;margin-right:-15px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);}
 .nav-list .nav-header{font-size:11px;font-weight:bold;line-height:1.333em;color:#000000;text-transform:uppercase;}
 .nav-list>li+.nav-header{margin-top:9px;}
-.nav-list>li>a:hover,.nav-list .active>a,.nav-list .active>a:hover{color:#eadecc;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.2);background-color:#3d8fb3;}
+.nav-list>li>a:hover,.nav-list .active>a,.nav-list .active>a:hover{color:#eadecc;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.2);background-color:#8f806f;}
 .nav-list [class^="icon-"]{margin-right:2px;}
 .nav-list .divider{height:1px;margin:8px 1px;overflow:hidden;background-color:#eadecc;*width:100%;*margin:-5px 0 5px;}
 .nav-tabs,.nav-pills{zoom:1;*zoom:1;}.nav-tabs:before,.nav-pills:before,.nav-tabs:after,.nav-pills:after{display:table;content:"";zoom:1;}
