--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -80,9 +80,41 @@ a#global-logo {
     }
 }
 
+.sras-searchbar {
+    text-align: center;
+    #ls-current-searchterm {
+        width: 75%;
+    }
+    #sras-search-button {
+        margin-bottom: 5px;
+    }
+    .sras-discreet {
+        color: darken(@baseColor2, 10%);
+        font-family: @fancyFont;
+        font-size: 0.75em;
+    }
+}
+
+#sras-search-form {
+    padding: 0;
+    margin: 0 0 5px 0;
+}
+
+#search-creator-form, #search-tags-form {
+    display: block;
+    padding: 0;
+    margin: 0 8px 10px 0;
+    input {
+        width: 100%;
+    }
+}
+
 .sras-searchknobs {
     font-family: @fancyFont;
     font-size: 0.8em;
+    .nav-list > li > a {
+        text-shadow: none;
+    }
     .nav-list [class^="icon-"] {
         margin-right: 5px;
     }
@@ -98,14 +130,6 @@ a#global-logo {
         width: 14px;
         height: 14px;
         margin: 2px 5px 2px 0;
-    }
-}
-
-#sras-search-form {
-    padding: 0;
-    margin: 0 0 5px 0;
-    .sras-discreet {
-        font-size: 0.75em;
     }
 }
 
