updated modal css to latest bootstrap, fixed cursor hover, title and close box. don,t forget to add class hide to make your modal hidden.

--- a/karl/views/static/ux2/css/variables.less
+++ b/karl/views/static/ux2/css/variables.less
@@ -75,6 +75,17 @@
 @btnInverseBackground:              @gray;
 @btnInverseBackgroundHighlight:     @grayDarker;
 
+// Z-index master list
+// -------------------------
+// Used for a bird's eye view of components dependent on the z-axis
+// Try to avoid customizing these :)
+@zindexDropdown:          1000;
+@zindexPopover:           1010;
+@zindexTooltip:           1020;
+@zindexFixedNavbar:       1030;
+@zindexModalBackdrop:     1040;
+@zindexModal:             1050;
+
 // Form states and alerts
 @warningText:             #c09853;
 @warningBackground:       #fcf8e3;
