--- a/karl/views/static/ux2/css/elements/modal.less
+++ b/karl/views/static/ux2/css/elements/modal.less
@@ -1,96 +1,113 @@
-.modal-open .dropdown-menu {
-  z-index: 2050;
+// MODALS
+// ------
+
+// Recalculate z-index where appropriate
+.modal-open {
+  .dropdown-menu {  z-index: @zindexDropdown + @zindexModal; }
+  .dropdown.open { *z-index: @zindexDropdown + @zindexModal; }
+  .popover       {  z-index: @zindexPopover  + @zindexModal; }
+  .tooltip       {  z-index: @zindexTooltip  + @zindexModal; }
 }
-.modal-open .dropdown.open {
-  *z-index: 2050;
-}
-.modal-open .popover {
-  z-index: 2060;
-}
-.modal-open .tooltip {
-  z-index: 2070;
-}
+
+// Background
 .modal-backdrop {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1040;
-  background-color: #000000;
+  z-index: @zindexModalBackdrop;
+  background-color: @black;
+  // Fade for backdrop
+  &.fade { opacity: 0; }
 }
-.modal-backdrop.fade {
-  opacity: 0;
-}
+
 .modal-backdrop,
 .modal-backdrop.fade.in {
-  opacity: 0.8;
+  .opacity(80);
   filter: alpha(opacity=80);
 }
+
+// Base modal
 .modal {
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 1050;
+  z-index: @zindexModal;
   overflow: auto;
   width: 560px;
   margin: -250px 0 0 -280px;
   background-color: #ffffff;
   border: 1px solid #999;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  *border: 1px solid #999;
-  /* IE6-7 */
-
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding-box;
-  background-clip: padding-box;
-}
-.modal.fade {
-  -webkit-transition: opacity .3s linear, top .3s ease-out;
-  -moz-transition: opacity .3s linear, top .3s ease-out;
-  -ms-transition: opacity .3s linear, top .3s ease-out;
-  -o-transition: opacity .3s linear, top .3s ease-out;
-  transition: opacity .3s linear, top .3s ease-out;
-  top: -25%;
-}
-.modal.fade.in {
-  top: 50%;
+  border: 1px solid rgba(0,0,0,.3);
+  *border: 1px solid #999; /* IE6-7 */
+  .css3_border_radius(6px);
+  .css3_box_shadow(0 3px 7px rgba(0,0,0,0.3));
+  .css3_background_clip(padding-box);
+  &.fade {
+    .css3_transition(e('opacity .3s linear, top .3s ease-out'));
+    top: -25%;
+  }
+  &.fade.in { top: 50%; }
 }
 .modal-header {
   padding: 9px 15px;
   border-bottom: 1px solid #eee;
+  // Close icon
+  .close { 
+    cursor: pointer;
+    margin-top: 2px;
+    float: right;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 18px;
+    color: @black;
+    text-shadow: 0 1px 0 #ffffff;
+    opacity: 0.2;
+    filter: alpha(opacity=20);
+    &:hover {
+      opacity: 0.5;
+      filter: alpha(opacity=50);
+    }
+  }
+  h3, h4 {
+    display: inline;
+  }
 }
-.modal-header .close {
-  margin-top: 2px;
-}
+
+// Body (where all modal content resises)
 .modal-body {
   overflow-y: auto;
   max-height: 400px;
   padding: 15px;
 }
+// Remove bottom margin if need be
 .modal-form {
   margin-bottom: 0;
 }
+
+// Footer (for actions)
 .modal-footer {
   padding: 14px 15px 15px;
   margin-bottom: 0;
-  text-align: right;
+  text-align: right; // right align buttons
   background-color: #f5f5f5;
   border-top: 1px solid #ddd;
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: inset 0 1px 0 #ffffff;
-  -moz-box-shadow: inset 0 1px 0 #ffffff;
-  box-shadow: inset 0 1px 0 #ffffff;
-  *zoom: 1;
+  .css3_border_radius(0 0 6px 6px);
+  .css3_box_shadow(inset 0 1px 0 @white);
+  .clearfix(); // clear it in case folks use .pull-* classes on buttons
+
+  // Properly space out buttons
+  .btn + .btn {
+    margin-left: 5px;
+    margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
+  }
+  // but override that for button groups
+  .btn-group .btn + .btn {
+    margin-left: -1px;
+  }
 }
+
 .modal-footer:before,
 .modal-footer:after {
   display: table;
@@ -99,10 +116,4 @@
 .modal-footer:after {
   clear: both;
 }
-.modal-footer .btn + .btn {
-  margin-left: 5px;
-  margin-bottom: 0;
-}
-.modal-footer .btn-group .btn + .btn {
-  margin-left: -1px;
-}
+
