--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -419,6 +419,7 @@ form#send-message {
     text-shadow: none;
     .css3_border_radius(.3em);
     padding: .5em .73em;
+    min-height: 70px;
     a {
         color: @baseFontColor;
     }
