--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -60,7 +60,10 @@ a#global-logo{padding-left:35px;}
 .sras-searchknobs .nav-list [class^="icon-"]{margin-right:5px;}
 .sras-result-title{font-size:1.1em;}
 .sras-details{font-size:0.85em;}.sras-details .icon-karl{width:14px;height:14px;margin:2px 5px 2px 0;}
-#chatter-panel-text{width:95%;}
+#chatter-panel #on-your-mind form{margin-bottom:5px;}
+#chatter-panel #on-your-mind #chatter-panel-text{width:95%;height:70px;}
+#chatter-panel #on-your-mind .help-block{width:95%;color:#555555;}
+#chatter-panel #on-your-mind .actions{margin-top:15px;}#chatter-panel #on-your-mind .actions #speak{width:100%;}
 #radar-panel .homepanel1{display:inline;float:left;width:39.58333333333333%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
 #radar-panel .homepanel2{display:inline;float:left;width:31.25%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
 #radar-panel .approvalpanel1{}
