--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -133,8 +133,26 @@ a#global-logo {
     }
 }
 
-#chatter-panel-text {
-    width: 95%;
+#chatter-panel {
+    #on-your-mind {
+        form {
+            margin-bottom: 5px;
+        }
+        #chatter-panel-text {
+            width: 95%;
+            height: 70px;
+        }
+        .help-block {
+            width: 95%;
+            color: #555555;
+        }
+        .actions {
+            margin-top: 15px;
+            #speak {
+                width: 100%;
+            }
+        }
+    }
 }
         
 .fixmylinks () {
