basic restyle of anonymous layout

--- a/karl/views/static/ux2/css/elements/login-form.less
+++ b/karl/views/static/ux2/css/elements/login-form.less
@@ -2,17 +2,19 @@
     background: @bodyBg;
     height: 100%;
     position: relative;
-    .contentWrapper,
-    .contentWrapper section.main {
-        padding: 0;
-        height: 100%;
-        width: 100%;
+    .contentWrapper {
+        padding: 1.33em 10%;
+        section.main {
+            padding: 0;
+            height: 100%;
+        }
     }
 }
 .anonymous-form {
-    width: 90%;
+    width: 100%;
+    display: block;
     margin: 0 auto;
-    left: 5%;
+    //left: 5%;
     text-align: center;
     padding-top: 2em;
     padding-bottom: 2em; 
