cherry pick chatter updates for review. Big refactor, clean up and more tests are pending

--- a/karl/views/static/ux2/css/elements/forms.less
+++ b/karl/views/static/ux2/css/elements/forms.less
@@ -157,6 +157,11 @@ input[type="hidden"] {
   margin-left: -18px;
 }
 
+// Chatter portlet radios do not need negative left margin
+input.chatter-control {
+  margin-left:0 !important;
+}
+
 // Move the options list down to align with labels
 .controls > .radio:first-child,
 .controls > .checkbox:first-child {
