--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -884,3 +884,25 @@ body > footer {
 // MODAL DIALOGS
 @import "elements/modal.less";
 
+// CHATTER
+#chatter-user-info {
+    margin: 0 0 30px 0;
+}      
+
+#chatter-user-info img {
+    float:left;
+    margin-right:10px;
+}
+
+a.quip-name, a.quip-tag, a.quip-community, a.quip-url {
+    color: #3D8FB3;
+}
+
+#remaining-characters {
+    color: #000000;
+    font-weight: bold;
+}
+
+small.timeago-date {
+    padding-left: 50px;
+}
