--- a/karl/views/static/ux2/css/elements/portlets.less
+++ b/karl/views/static/ux2/css/elements/portlets.less
@@ -17,6 +17,12 @@
     .label-inverse:hover {
         background-color: darken(@linkColor, 10%);
     }
+    .portlet-buttons {
+        margin-top: 1em;
+        a, a.btn {
+            color: #000000;
+        }
+    }
 }
 .contentRelated {
     .css3_border_radius(.5em);
@@ -46,6 +52,9 @@
             color: darken(@linkColor, 20%);
         }
     }
+    a.btn {
+        color: #000000;
+    }
 }
 
 .portlet-list {
@@ -69,12 +78,6 @@
     }
 }
 
-.portlet-buttons {
-    margin-top: 1em;
-    a.btn {
-        color: #000000;
-    }
-}
 
 @media only screen and (min-width: 640px) {
     .portlet {
