--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -537,12 +537,13 @@ a.next{margin:0 0 0 .5em;}.generatedcontent a.next:after{margin-left:-0.2em;bord
 .portlet h3{font-size:1.333;margin-top:0;}
 .portlet .label-inverse{background-color:#3d8fb3;}
 .portlet .label-inverse:hover{background-color:#30718d;}
+.portlet .portlet-buttons{margin-top:1em;}.portlet .portlet-buttons a,.portlet .portlet-buttons a.btn{color:#000000;}
 .contentRelated{-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}.contentRelated:before{border-top:none;border-left:0.5em solid transparent;border-right:0.5em solid transparent;border-bottom:0.5em solid #c8b6a1;content:"";display:block;width:0;height:0;*line-height:0;position:absolute;top:-0.5em;left:0.5em;}
 .sectionRelated{background:#82adbf;text-shadow:none;}.sectionRelated a{color:#ffffff;}.sectionRelated a:hover{color:#eadecc;}
 #my-communities-list,#blog-archive{font-size:0.9em;}#my-communities-list a,#blog-archive a{color:#ffffff;}#my-communities-list a:hover,#blog-archive a:hover{color:#235267;}
+#my-communities-list a.btn,#blog-archive a.btn{color:#000000;}
 .portlet-list{padding:0;margin:0;list-style:none;}.portlet-list>li:first-child{border-top:1px dotted #4a7c91;}
 .portlet-item{color:#235267;padding:0 0 5px 0;margin:0 0 5px 0;border-bottom:1px dotted #4a7c91;}.portlet-item .footer-line{color:#eadecc;font-size:0.80em;font-style:italic;}
-.portlet-buttons{margin-top:1em;}.portlet-buttons a.btn{color:#000000;}
 @media only screen and (min-width: 640px){.portlet{float:left;width:44%;margin-right:4%;margin-left:0;padding:2%;} .portlet:nth-of-type(even){margin-right:0;} .sectionRelated{-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}}@media only screen and (min-width: 1024px){.portlet{float:none;width:100%;margin-left:0;margin-right:0;padding:0.6665em;} .contentRelated:before{border-left:none;border-top:0.5em solid transparent;border-right:0.5em solid #c8b6a1;border-bottom:0.5em solid transparent;content:"";display:block;width:0;height:0;*line-height:0;top:0.5em;left:-0.46em;}}@media only screen and (min-width: 2024px){.portlet{display:inline;float:left;width:48.958333333333336%;margin-left:0;margin-right:1.0416666666666665%;}.portlet:nth-child(even){margin-left:1.0416666666666665%;margin-right:0;} .ie7 .portlet{width:48.458333333333336%;}}.blogComment{position:relative;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;background-color:#C8B6A1;margin-top:40px;margin-bottom:1em;padding:1em;min-height:100px;height:auto !important;font-size:0.85em;}.blogComment a:hover{color:#8F806F;}
 .blogComment .commentManagement{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;text-transform:capitalize;float:right;position:relative;display:block;clear:both;}.blogComment .commentManagement ul{font-size:0.95em;float:none;clear:both;list-style:none;padding:0;}.blogComment .commentManagement ul>li{display:inline;padding:0 10px;margin:0;border-left:1px solid #8F806F;}.blogComment .commentManagement ul>li>a{display:inline-block;}
 .blogComment .commentManagement ul>li:first-child{border-left:none;padding-left:0;}
@@ -635,11 +636,8 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .modal-footer .btn-group .btn+.btn{margin-left:-1px;}
 .modal-footer:before,.modal-footer:after{display:table;content:"";}
 .modal-footer:after{clear:both;}
-#chatter-user-info{margin:0 0 30px 0;}      
+#chatter-user-info{margin:0 0 30px 0;}
 #chatter-user-info img{float:left;margin-right:10px;}
 a.quip-name,a.quip-tag,a.quip-community,a.quip-url{color:#3D8FB3;}
 #remaining-characters{color:#000000;font-weight:bold;}
-.repost-box{display:none;}
-.reply-box{display:none;}
-.post-options{display:none;}
 small.timeago-date{padding-left:50px;}
