--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -57,3 +57,15 @@
     margin-top: 16px;
     opacity: 0;
 }
+
+.repost-box {
+    display:none;
+}
+
+.reply-box {
+    display:none;
+}
+
+.post-options {
+    display:none;
+}
