Ux2: land gridbox. Now rebased manually on ux2.

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -2,7 +2,9 @@
 @import "css/variables.less";
 @import "css/_grid.less";
 @import "css/_mixins.less";
-@import "karl.wikitoc.less";
+@import "plugins/popper-gridbox/karl.wikitoc.less";
+@import "plugins/popper-gridbox/popper.gridbox.less";
+
 
 
 #bcpanel-global-logo {
