added icon to reply and repost in chatter message

--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -94,6 +94,9 @@
             }
         }
     }
+    .reply i, .repost i {
+        padding-right: 5px;
+    }
     .quip {
         padding: 5px 0 10px;
     }
