--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -44,7 +44,55 @@
     }
 }
 #chatter-user-info {
+    color: @baseColor1;
+    font-family: @fancyFont;
     margin: 0 0 30px 0;
+    .css3_border_radius(.5em);
+    a:hover {
+        color: @baseColor1;
+    }
+    .user-avatar {
+        width: 40px
+        position: relative;
+        float: left;
+    }
+    .user-info {
+        position: relative;
+        margin-left: 50px;
+    }
+    .user-stats {
+        margin-left: 50px;
+        position: relative;
+        ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            border-top: 1px solid @baseColor1;
+            border-bottom: 1px solid @baseColor1;
+            overflow: hidden;
+            > li {
+                display: inline;
+                padding: 0 10px;
+                margin: 0;
+                vertical-align: middle;
+                border-right: 1px solid @baseColor1;
+                > a {
+                    font-size: 0.75em;
+                    strong {
+                        color: @baseColor1;
+                        font-size: 1em;
+                    }
+                }
+            }
+            > li:first-child {
+                padding-left: 0;
+            }
+            > li:last-child {
+                border-right: none;
+                padding-right: 0;
+            }
+        }
+    }
 }      
 
 #chatter-user-info img {
